--- a/.github/workflows/main_dxservice-appservice-java17-m-hazama.yml
+++ b/.github/workflows/main_dxservice-appservice-java17-m-hazama.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: java-app
+          name: dxservice
           path: '${{ github.workspace }}/target/*.jar'
 
   deploy:
@@ -44,7 +44,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: java-app
+          name: dxservice
       
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
