--- a/.github/workflows/main_dxservice-appservice-java17-m-hazama.yml
+++ b/.github/workflows/main_dxservice-appservice-java17-m-hazama.yml
@@ -44,8 +44,9 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: dxservice
-      
+            name: java-app
+            run-id: ${{ github.event.workflow_run.id }}
+            github-token: ${{ secrets.GITHUB_TOKEN }} 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
