--- a/.github/workflows/main_dxservice-appservice-java17-m-hazama.yml
+++ b/.github/workflows/main_dxservice-appservice-java17-m-hazama.yml
@@ -45,6 +45,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
             name: java-app
+            path: '${{ github.workspace }}'
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
