--- a/.github/workflows/main_dxservice-appservice-java17-m-hazama.yml
+++ b/.github/workflows/main_dxservice-appservice-java17-m-hazama.yml
@@ -16,31 +16,22 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - uses: azure/login@v2
-      with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-    - name: Set up JDK 1.17
+    - name: Set up JDK 1.8
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'microsoft'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-      working-directory: complete
+      working-directory: my-app-path
     - name: Azure WebApp
       uses: Azure/webapps-deploy@v3
       with:
-        app-name: my-app-name
-        package: my/target/*.jar
+        app-name: TechLabo-Java-UnitFes
+        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_F6CAAF15D9924947B633DAEF776CD609 }}
+        package: TechLabo-Java-UnitFes/target/*.war
 
-    # Azure logout 
-    - name: logout
-      run: |
-        az logout
-
-# jobs:
+  # jobs:
   # build:
   #   runs-on: ubuntu-latest
   #   permissions:
