--- a/.github/workflows/main_dxservice-appservice-java17-m-hazama.yml
+++ b/.github/workflows/main_dxservice-appservice-java17-m-hazama.yml
@@ -16,20 +16,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 1.8
+    - name: Set up JDK 1.17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'microsoft'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-      working-directory: my-app-path
+      # working-directory: my-app-path
     - name: Azure WebApp
       uses: Azure/webapps-deploy@v3
       with:
         app-name: TechLabo-Java-UnitFes
         publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_F6CAAF15D9924947B633DAEF776CD609 }}
-        package: TechLabo-Java-UnitFes/target/*.war
+        package: /target/*.war
 
   # jobs:
   # build:
