過去の定義に合わせて修正

--- a/.github/workflows/main_dxservice-appservice-java17-m-hazama.yml
+++ b/.github/workflows/main_dxservice-appservice-java17-m-hazama.yml
@@ -22,67 +22,32 @@ jobs:
         java-version: '17'
         distribution: 'microsoft'
     - name: Build with Maven
-      run: mvn clean package --file pom.xml
+      run: mvn clean install
 
-    - name: List target directory
-      run: ls -la target/
-    
-    - name: List WAR files
-      run: find target -name "*.war"
-
-      #run: mvn -B package --file pom.xml
-      # working-directory: my-app-path
-    - name: Azure WebApp
-      uses: Azure/webapps-deploy@v3
+    - name: Upload artifact for deployment job
+      uses: actions/upload-artifact@v2
       with:
+        name: java-app
+        path: '${{ github.workspace }}/target/*.jar'
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v2
+        with:
+          name: java-app
+
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
           app-name: 'dxservice-appservice-java17-m-hazama'
           slot-name: 'Production'
-          package: 'target/dxservice-0.0.1-SNAPSHOT.war'
-          # package: '*.war'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_F6CAAF15D9924947B633DAEF776CD609 }}
-
-  # jobs:
-  # build:
-  #   runs-on: ubuntu-latest
-  #   permissions:
-  #     contents: read #This is required for actions/checkout
-
-  #   steps:
-  #     - uses: actions/checkout@v4
-
-  #     - name: Set up Java version
-  #       uses: actions/setup-java@v4
-  #       with:
-  #         java-version: '17'
-  #         distribution: 'microsoft'
-
-  #     - name: Build with Maven
-  #       run: mvn clean install
-
-  #     - name: Upload artifact for deployment job
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: java-app
-  #         path: '${{ github.workspace }}/target/*.jar'
-
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   environment:
-  #     name: 'Production'
-  #     url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-      
-  #   steps:
-  #     - name: Download artifact from build job
-  #       uses: actions/download-artifact@v4
-  #       with:
-  #           name: java-app
-  #           path: '${{ github.workspace }}'
-  #     - name: Deploy to Azure Web App
-  #       id: deploy-to-webapp
-  #       uses: azure/webapps-deploy@v3
-  #       with:
-  #         app-name: 'dxservice-appservice-java17-m-hazama'
-  #         slot-name: 'Production'
-  #         package: '*.jar'
-  #         publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_F6CAAF15D9924947B633DAEF776CD609 }}
+          package: '*.jar'
